Fixed white text on 'Jump to Present'

--- a/Artix/BetterDiscord/themes/boo.theme.css
+++ b/Artix/BetterDiscord/themes/boo.theme.css
@@ -15,6 +15,12 @@
 @import url('https://gibbu.github.io/BetterDiscord-Themes/HorizontalServerlist/base.css');
 @import url('https://gibbu.github.io/BetterDiscord-Themes/RadialStatus/base.css');
 
+.barButtonBase-2uLO1z {
+	color: #000000;
+}
+
+
+
 :root {
 
 
